--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-custom-green" href="#mision-vision">Misión & Visión</a>
                     </li>
+					<li class="nav-item">
+                        <a class="nav-link text-custom-green" href="#servicios">Servicios</a>
+					</li>
                     <li class="nav-item">
                         <a class="nav-link text-custom-green" href="#habilidades">Habilidades</a>
                     </li>
@@ -460,6 +463,44 @@
             </div>
         </div>
     </section>
+    <!-- Sección Servicios -->
+    <section id="servicios" class="py-5 bg-light">
+<div class="container">
+    <h2 class="heading text-center display-4 fw-bold mb-5">Nuestros Servicios</h2>
+
+    <div class="row">
+      <div class="col-md-4 value-item fade-in">
+        <div class="text-center p-4">
+          <div class="icon-box">
+            <i class="fas fa-laptop-code"></i>
+          </div>
+          <h5 class="fw-bold">Desarrollo Web</h5>
+          <p>Creación de sitios y plataformas web modernas, escalables y seguras.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4 value-item fade-in">
+        <div class="text-center p-4">
+          <div class="icon-box">
+            <i class="fas fa-mobile-alt"></i>
+          </div>
+          <h5 class="fw-bold">Aplicaciones Móviles</h5>
+          <p>Diseño y desarrollo de apps móviles para Android y iOS.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4 value-item fade-in">
+        <div class="text-center p-4">
+          <div class="icon-box">
+            <i class="fas fa-cloud"></i>
+          </div>
+          <h5 class="fw-bold">Consultoría Tecnológica</h5>
+          <p>Asesoramiento en adopción de tecnologías y transformación digital.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Sección Habilidades -->
     <section id="habilidades" class="py-5 bg-light">
